--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,4 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
+/* 
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -34,9 +28,9 @@
 }
 
 .card {
-  padding: 2em;
+
 }
 
 .read-the-docs {
   color: #888;
-}
+} */
