--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,21 @@
-:root {
+body {
+  margin: 0;
+  place-items: center;
+  width: 100vw;
+  height: 100%;
+  background-color: #242424;
+}
+
+#root {
+
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
   width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
+  height: 100%;
+
 
 }
 
@@ -27,12 +28,7 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  place-items: center;
-  width: 100vw;
-  height: 100vh;
-}
+
 
 h1 {
   font-size: 3.2em;
@@ -72,7 +68,9 @@ button:focus-visible {
 }
 
 .move-list {
-  display:grid;
+  display:flex;
+  flex-flow: column nowrap;
+  align-items: center;
   gap: 10px; /* Space between moves */
   padding: 20px 0;
 }
@@ -81,6 +79,8 @@ button:focus-visible {
 
   background-color: #e0e0e0;
   color: black;
+  width: 30%;
+
   border-radius: 8px;
   padding: 8px;
   text-align: center;
@@ -90,13 +90,15 @@ button:focus-visible {
 }
 
 .poke-details {
-  display:grid;
-  grid-template-columns: repeat(auto-fill,minmax(150px, 1fr));
+  display:flex;
+  flex-flow: column;
+  /* grid-template-columns: repeat(auto-fill,minmax(150px, 1fr)); */
   gap: 16px;
   /* background-color: rgb(60, 57, 57); */
   padding: 10px;
   text-align: center;
   transition: transform 0.2s;
+  height: 100vh;
 
 
 
@@ -133,6 +135,7 @@ button:focus-visible {
   display: flex;
   flex-flow: row wrap;
   margin-left: 20%;
+  overflow-y: scroll;
 
 }
 
@@ -153,4 +156,9 @@ button:focus-visible {
 .search-input{
   position: fixed;
   top: 80px
+}
+
+.poke-img {
+
+
 }
