--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
   place-items: center;
-  width: 100vw;
-  height: 100%;
+
   background-color: #242424;
 }
 
@@ -13,10 +12,6 @@ body {
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
-  width: 100vw;
-  height: 100vh;
-
-
 }
 
 a {
@@ -71,7 +66,7 @@ button:focus-visible {
   display:flex;
   flex-flow: column nowrap;
   align-items: center;
-  gap: 10px; /* Space between moves */
+  gap: 10px;
   padding: 20px 0;
 }
 
@@ -92,7 +87,6 @@ button:focus-visible {
 .poke-details {
   display:flex;
   flex-flow: column;
-  /* grid-template-columns: repeat(auto-fill,minmax(150px, 1fr)); */
   gap: 16px;
   /* background-color: rgb(60, 57, 57); */
   padding: 10px;
@@ -107,13 +101,13 @@ button:focus-visible {
 }
 
 .poke-details:hover {
-  transform: scale(1.07); /* Scale effect on hover */
+  transform: scale(1.00); 
 }
 
 .poke-details img {
 
   margin: auto;
-  width: 200px; /* Set a fixed size for images */
+  width: 200px; 
   height: 200px;
 
 
@@ -140,7 +134,6 @@ button:focus-visible {
 }
 
 .list-pokemon{
-  /* padding: 0px 100px 20px 0px; */
   margin-left: 60px;
   margin-bottom: 20px;
   display: flex;
